# clean-architecture-fastapi

./: .env.example  .gitignore  README.md  docker-compose-production.yml  docker-compose.yml  dockerfile.app  pyproject.toml
src/configs/: beanie_config.py  container_config.py  redis_config.py
src/modules/todo/contracts/dtos/: create_todo.py
src/modules/todo/implementations/beanie/: beanie_todo_repository.py  document.py
src/modules/todo/implementations/fake/: fake_todo_repository.py
src/modules/todo/repositories/: todo.py
src/modules/todo/routers/: todo_router.py
src/modules/todo/services/createTodo/: controller.py  service.py  test_service.py
src/modules/todo/services/create_todo/: controller.py  service.py  test_service.py
src/modules/todos/contracts/dtos/: create_todo.py
src/modules/todos/contracts/repositories/: todo.py  (+1 more)
src/modules/todos/entities/: todo.py
src/modules/todos/repositories/: todo.py
src/modules/todos/routers/: todos_router.py
src/modules/todos/services/: tests.py
src/modules/users/entities/: user.py
src/modules/users/routers/: users_router.py
src/modules/users/services/: tests.py
src/providers/: container.py  test_provider.py
src/providers/hash/: index.py
src/providers/token/: index.py
src/server/: index.py
src/shared/contracts/enums/: application_scope.py  security_scope.py
src/shared/dependencies/: authorization.py
src/shared/server/: index.py  routes.py
src/shared/server/dependencies/: authorization.py
src/shared/server/errors/: app_exceptions.py
src/shared/utils/: get_authorization_scheme_param.py
(+36 files in other folders)
